# src/controllers/UploadController.ts
@@ -4,6 +4,12 @@ export default {
   async create(request: Request, response: Response) {
     // #swagger.tags = ['Upload']
     // #swagger.description = 'Endpoint para fazer upload de arquivos.'
+    /* #swagger.parameters['Authorization'] = {
+              in: 'header',
+              required: true,
+              description: 'Chave da api',
+              type: 'string',
+    } */
     /* #swagger.parameters['multipart/form-data'] = {
               in: 'formData',
               required: true,
